welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: not found: value n
	n match {
        ^golomb:4: error: not found: value n
		case _ => 1 + golomb(n - golomb(golomb(n-1)));
                                     ^