welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	n match {
		case 1 => 1;
		case _ => 1 + golomb(n - golomb(golomb(n-1)));
	}
}
